--- a/disasteraid-auth-frontend/package.json
+++ b/disasteraid-auth-frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.12.2",
     "d3-scale": "^4.0.2",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
