--- a/disasteraid-auth-frontend/package.json
+++ b/disasteraid-auth-frontend/package.json
@@ -10,9 +10,11 @@
     "axios": "^1.12.2",
     "d3-scale": "^4.0.2",
     "framer-motion": "^12.23.24",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.546.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
