--- a/disasteraid-auth-frontend/package.json
+++ b/disasteraid-auth-frontend/package.json
@@ -11,6 +11,7 @@
     "d3-scale": "^4.0.2",
     "framer-motion": "^12.23.24",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.546.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,6 +19,7 @@
     "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
