--- a/disasteraid-auth-frontend/package.json
+++ b/disasteraid-auth-frontend/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.12.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "d3-scale": "^4.0.2",
-    "framer-motion": "^12.23.24",
+    "framer-motion": "^11.18.2",
     "leaflet": "^1.9.4",
     "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.546.0",
@@ -20,6 +22,8 @@
     "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
     "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^2.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
