--- a/disasteraid-auth-backend/.env
+++ b/disasteraid-auth-backend/.env
@@ -1,3 +1,3 @@
 PORT=5001
-MONGO_URI=mongodb://127.0.0.1:27017/disasteraid_auth
+MONGO_URI=mongodb+srv://admin:key_13@cluster0.vvoisdk.mongodb.net/disasteraid_db?retryWrites=true&w=majority
 JWT_SECRET=supersecretkey123
